--- a/RestaurantListings.UI/package.json
+++ b/RestaurantListings.UI/package.json
@@ -13,13 +13,16 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~10.1.3",
+    "@angular/cdk": "^11.0.1",
     "@angular/common": "~10.1.3",
     "@angular/compiler": "~10.1.3",
     "@angular/core": "~10.1.3",
-    "@angular/forms": "~10.1.3",
+    "@angular/forms": "^10.2.3",
+    "@angular/material": "^11.0.1",
     "@angular/platform-browser": "~10.1.3",
     "@angular/platform-browser-dynamic": "~10.1.3",
     "@angular/router": "~10.1.3",
+    "@types/webrtc": "0.0.26",
     "angular-oauth2-oidc": "^10.0.3",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
