Final changes - fix double call to getRestaurants(). Removed background photo styling, which breaks the scrollbar on the description.  CSS final changes.

--- a/RestaurantListings.UI/package.json
+++ b/RestaurantListings.UI/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
-    "start:aspnet": "echo hello && ng serve --progress=false",
+    "start": "echo starting && ng serve --verbose",
+    "start:aspnet": "echo starting && ng serve --progress=false",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
