--- a/RestaurantListings.UI/package.json
+++ b/RestaurantListings.UI/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "~10.1.3",
     "@types/webrtc": "0.0.26",
     "angular-oauth2-oidc": "^10.0.3",
+    "angular-oauth2-oidc-jwks": "^9.0.0",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
